<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="org.isec.cub.siga.activity.MainActivity">

    <TextView
        android:text="@string/hello_world"
        android:layout_width="366dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textColor="#ff8c6e9b"
        android:textIsSelectable="false"
        android:shadowColor="#ff989b0e"
        android:gravity="center"
        android:textSize="30dp"
        android:layout_y="101dp"
        android:layout_x="-7dp" />



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/valueResult"/>

    <ImageView
        android:layout_width="275dp"
        android:layout_height="71dp"
        android:id="@+id/imageView"
        android:contentDescription="@string/logoIsec"
        android:src="@drawable/isec"
        android:layout_x="-14dp"
        android:layout_y="8dp" />

    <ImageView
        android:layout_width="64dp"
        android:layout_height="66dp"
        android:id="@+id/imageView2"
        android:src="@drawable/deis"
        android:contentDescription="@string/logoDeis"
        android:layout_x="286dp"
        android:layout_y="8dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/titlePrograms"
        android:id="@+id/textView2"
        android:textColor="#ff1843ff"
        android:textSize="40dp"
        android:gravity="center"
        android:layout_marginTop="52dp"
        android:layout_y="182dp" />

    <ImageView
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:id="@+id/imageView3"
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="71dp"
        android:layout_x="126dp"
        android:layout_y="299dp" />

</AbsoluteLayout>

    <!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        >

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:stretchColumns="1"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/descriptionTitle"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView2"
                android:layout_alignParentLeft="false"
                android:layout_alignParentStart="true"
                android:layout_marginTop="42dp"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="false"
                android:layout_alignWithParentIfMissing="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/descriptionList"
                android:id="@+id/textView4"
                android:textColor="#ffd26c13"
                android:singleLine="false"
                android:password="false"
                android:phoneNumber="false"
                android:textSize="20dp"
                android:layout_below="@+id/textView3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="51dp" />

        </TableLayout>
    </ScrollView>-->
